--- a/spa-source/public/index.html
+++ b/spa-source/public/index.html
@@ -21,7 +21,7 @@
     <title>mlAcademy</title>
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/4/simplex/bootstrap.min.css"
+      href="https://bootswatch.com/4/united/bootstrap.min.css"
     />
   </head>
 
