--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Poppins:700" />
+    <link rel="preconnect" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:700"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+      media="screen"
+    />
     <style>
       body {
         overflow: hidden;
       }
     </style>
+
     <title>mlAcademy</title>
   </head>
   <body>
